5.3.1
  - "Data Export" dialog now have a "Cancel" button.
  - An NPE occurred if the data model is empty.

5.3
  - The Data Browser now offers a "Data Export" feature.

5.2.1
  - minor improvements.

5.2
  - Added "Closure View" and "Closure Border View" tools.

5.1
  - Better UI and improved navigation.

5.0.2
  - Viewing contents of CLOB and XML column types 

5.0.1
  - Unicode support.

5.0
  - Ability to collect rows in a separate embedded database.
    This allows it to export data from read-only databases.

4.4
  - internal refactorings.

4.3.9
  - don't write empty lob files for liquibase export. (thanks to Jason Pell)

4.3.8
  - fix for for liquibase BLOB export. (thanks to Jason Pell)

4.3.7
  - refinements to timestamp, date, time format mask config for liquibase export. (thanks to Jason Pell)

4.3.6
  - fixed a bug concerning CLOB export in Liquibase format. (thanks to Jason Pell)

4.3.5
  - added support for ARRAY type.

4.3.4
  - Workaround for http://bugs.mysql.com/bug.php?id=47108

4.3.3
  - Fix for http://sourceforge.net/p/dbeauty/tickets/4/

4.3.2
  - Fix for http://sourceforge.net/p/dbeauty/tickets/3/

4.3.1
  - Minor bug fixes. 

4.3
  - Data Browser has been improved.
  - Fixed a performance issue related to ResultSet#getMetaData and Postgresql 9.1 JDBC driver. 

4.2.4
  - added support for postgresql UUID type.

4.2.3
  - fixed an incompatibility with Java 8.

4.2.2
  - fixed a bug concerning MySQL's unsigned integer types. 

4.2.1
  - fixed a bug concerning the determination of the universal-primary-key.
  - fixed a bug in file chooser window (thanks to oliver45)

4.2
  - added support for Liquibase file format (thanks to achimgrie) 

4.1
  - added support for Postgres HStore data type.
  - internal refactorings.

4.0.18
  - changed order of which the prolog/epilog files are included into the export script.

4.0.17
  - Workaround for ORA-01424.

4.0.16
  - Added support for Informix's "datetime year to day/month/minute" column type.

4.0.15