@@ -1,6 +1,7 @@
 5.3.1
   - "Data Export" dialog now have a "Cancel" button.
   - An NPE occurred if the data model is empty.
+  - Statistics were collected for the remote database instead for the local when using "-scope LOCAL_DATABASE".
 
 5.3
   - The Data Browser now offers a "Data Export" feature.
